# quickstart-ml-starter

./: README.md  cookiecutter.json  prompts.yml
{{ cookiecutter.repo_name }}/: .gitignore  Dockerfile  README.md  pyproject.toml
{{ cookiecutter.repo_name }}/.devcontainer/: devcontainer.json  setup.sh
{{ cookiecutter.repo_name }}/conf/base/: mlflow.yml  vertexai.yml
{{ cookiecutter.repo_name }}/conf/cloud/: catalog.yml  mlflow.yml
{{ cookiecutter.repo_name }}/notebooks/: example.ipynb
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package }}/: settings.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package }}/pipelines/data_science/: nodes.py
